minor content fix

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               # An enthusiastic programmer willing to learn new technologies as needed. Works with Vue.js, Ionic, Node.js + Express, Elixir with Phoenix, PHP with Laravel, Postgres, MySQL, and MongoDB. High interest in embedded systems and electronics. 
             </p>
             <p class="font-italic">
-              # Second-year student at Y-Max University, Yangon for the two-year Advanced Diploma in Computing: Networking programme offered by the Scottish Qualifications Authority, UK. First-year Mathematics undergrad at Yangon University(Hlaing Campus). 
+              # Second-year student at Y-Max University, Yangon for Advanced Diploma in Computing: Networking programme offered by the Scottish Qualifications Authority, UK. First-year Mathematics undergrad at Yangon University(Hlaing Campus). 
             </p>
           </div>
         </div>
