--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Kyal Sin Lin Lett</h1>
-      <p>I'm a <span class="typed" data-typed-items="Web Developer, Student, Hobbyist"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Web Developer"></span></p>
       <div class="social-links">
         <a target="_blank" href="https://www.instagram.com/locomoto0012" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a target="_blank" href="https://www.linkedin.com/in/kyal-sin/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -69,16 +69,13 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-lg-2">
             <img src="assets/img/profile2.jpg" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content">
+          <div class="col-lg-10 pt-4 pt-lg-0 content">
             <h3>Web Developer | Student</h3>
             <p class="font-italic">
-              # An enthusiastic programmer willing to learn new technologies as needed. Works with Vue.js, Ionic, Node.js + Express, Elixir with Phoenix, PHP with Laravel, Postgres, MySQL, and MongoDB. High interest in embedded systems and electronics. 
-            </p>
-            <p class="font-italic">
-              # Second-year student at Y-Max University, Yangon for Advanced Diploma in Computing: Networking programme offered by the Scottish Qualifications Authority, UK. First-year Mathematics undergrad at Yangon University(Hlaing Campus). 
+              An enthusiastic back-end engineer with keen interest in systems design & architecture, deep understanding in network engineering (Routing, Switching, WAN) and strong passion for embedded systems. Advocate for self-education and independent learning.
             </p>
           </div>
         </div>
@@ -99,49 +96,40 @@
             <div class="resume-item pb-0">
               <h4>Kyal Sin Lin Lett</h4>
               <p>
-                <em>
-                  Currently working remotely for a Singaporean-based company as a Junior Back-end developer, building projects with Elixir and it's Phoenix Web Framework but also does ad-hoc front-end development using Vue.js and Ionic.
-                </em>
+                Currently working remotely at a Singaporean-based company as a back-end engineer, building projects with Elixir, Python and JavaScript but also does front-end development using Vue and React.
               </p>
             </div>
-
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Bachelor of Science in Mathematics</h4>
-              <h5>2019 - present</h5>
-              <p><em>Yangon University - Hlaing Campus, Yangon</em></p>
-              <p>Four-year undergraduate degree in Mathematics. Currently in the first-year.</p>
-            </div>
-            <div class="resume-item">
-              <h4>Bachelor of Science in Business Computing and Information Systems</h4>
+              <h4>B.Sc (Hons) in Computing (Information Systems)</h4>
               <h5>2022 - present</h5>
-              <p><em>University of Central Lancashire, UK <small>offered at</small> Y-Max University, Yangon</em></p>
-              <p>Final year top-up degree for Advanced Diploma in Computing(Networking). Combines the technical computing knowledge with practical business cases.</p>
+              <p><em>University of Greenwich, UK <small>offered at</small> KMD Institute, Yangon</em></p>
+              <p>The degree encompasses a theoretical understanding and practical experience of designing, constructing and modifying a wide range of systems</p>
             </div>
             <div class="resume-item">
               <h4>Advanced Diploma in Computing: Networking</h4>
               <h5>2019 - 2021</h5>
               <p><em>Scottish Qualifications Authority, UK <small>offered at</small> Y-Max University, Yangon</em></p>
-              <p>Two-year advanced diploma course in computing with specialization in network engineering. Contains modules to help prepare for professional certifications such as CCNA(Routing and Switching), AWS Solutions Architect and more.</p>
+              <p>Two-year advanced diploma in computing with specialization in network engineering. Contains modules to help prepare for professional certifications such as CCNA(Routing and Switching), AWS Solutions Architect and more.</p>
             </div>
             <div class="resume-item">
-              <h4>Diploma in Web Development</h4>
+              <h4>Professional Diploma in Web Development</h4>
               <h5>2019 - 2020</h5>
               <p><em>NCFE, UK <small>offered at</small> Y-Max University, Yangon</em></p>
-              <p>One-year diploma course in web development. The tech stack that was taught in the course was Vue, PHP with Laravel and MySQL.</p>
+              <p>One-year diploma in web development. The tech stack that was taught in the course was Vue, PHP with Laravel and MySQL.</p>
             </div>
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Junior Back-end Developer @ Biziolab(SG)</h4>
+              <h4>Back-end Engineer @ Biziolab(SG)</h4>
               <h5>May 2021 - Present</h5>
               <p><em>Yangon, Myanmar</em></p>
               <ul>
-                <li>Work under supervision of the senior engineer and report to him.</li>
+                <li>Work under supervision of the senior engineer</li>
                 <li>Learn new technologies as needed by the project requirements.</li>
                 <li>Contribute in brain-storming sessions to come up with the most effective and efficient solutions.</li>
-                <li>Participate in knowledge sharing sessions and daily standup meetings to catchup on latest updates.</li>
+                <li>Participate in knowledge sharing sessions and daily standup meeti ngs to catchup on latest updates.</li>
                 <li>Learned on the job: Docker, AWS, Typescript, Ionic for Vue, Redis</li>
               </ul>
             </div>
