--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div class="col-lg-10 pt-4 pt-lg-0 content">
             <h3>Web Developer | Student</h3>
             <p class="font-italic">
-              An enthusiastic back-end engineer with keen interest in systems design & architecture, deep understanding in network engineering (Routing, Switching, WAN) and strong passion for embedded systems. Advocate for self-education and independent learning.
+              An enthusiastic back-end engineer with keen interest in systems design & architecture, deep understanding of network engineering (Routing, Switching, WAN) and strong passion for embedded systems. Advocate for self-education and independent learning.
             </p>
           </div>
         </div>
