update education and about

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Kyal Sin Lin Lett</h1>
-      <p>I'm a <span class="typed" data-typed-items="Web Developer"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Software Engineer"></span></p>
       <div class="social-links">
         <a target="_blank" href="https://www.instagram.com/locomoto0012" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a target="_blank" href="https://www.linkedin.com/in/kyal-sin/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -60,12 +60,12 @@
   <main id="main">
 
     <!-- ======= About Section ======= -->
-    <section id="about" class="about">
+    <section id="about" class="about">  
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Passionate about technology. Eager to learn. Love to build.</p>
+          <p>Passionate programmer. Eager to learn. Love to build.</p>
         </div>
 
         <div class="row">
@@ -73,9 +73,9 @@
             <img src="assets/img/profile2.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-10 pt-4 pt-lg-0 content">
-            <h3>Web Developer | Student</h3>
+            <h3>Software Engineer</h3>
             <p class="font-italic">
-              An enthusiastic back-end engineer with keen interest in systems design & architecture, deep understanding of network engineering (Routing, Switching, WAN) and strong passion for embedded systems. Advocate for self-education and independent learning.
+              An enthusiastic backend engineer with keen interest in systems design & architecture, deep understanding of network engineering (Routing, Switching, WAN) and strong interested in distributed systems. Advocate for self-education and independent learning.
             </p>
           </div>
         </div>
@@ -101,22 +101,10 @@
             </div>
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>B.Sc (Hons) in Computing (Information Systems)</h4>
-              <h5>2022 - present</h5>
-              <p><em>University of Greenwich, UK <small>offered at</small> KMD Institute, Yangon</em></p>
-              <p>The degree encompasses a theoretical understanding and practical experience of designing, constructing and modifying a wide range of systems</p>
-            </div>
-            <div class="resume-item">
-              <h4>Advanced Diploma in Computing: Networking</h4>
-              <h5>2019 - 2021</h5>
-              <p><em>Scottish Qualifications Authority, UK <small>offered at</small> Y-Max University, Yangon</em></p>
-              <p>Two-year advanced diploma in computing with specialization in network engineering. Contains modules to help prepare for professional certifications such as CCNA(Routing and Switching), AWS Solutions Architect and more.</p>
-            </div>
-            <div class="resume-item">
               <h4>Professional Diploma in Web Development</h4>
               <h5>2019 - 2020</h5>
               <p><em>NCFE, UK <small>offered at</small> Y-Max University, Yangon</em></p>
-              <p>One-year diploma in web development. The tech stack that was taught in the course was Vue, PHP with Laravel and MySQL.</p>
+              <p>Four-month diploma in web development. The tech stack that was taught in the course was Vue, PHP with Laravel and MySQL.</p>
             </div>
           </div>
           <div class="col-lg-6">
@@ -156,7 +144,7 @@
         </div>
     </section><!-- End Contact Section -->
 
-  </main><!-- End #main -->
+ </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
