--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
         <div class="row">
           <div class="col-lg-2">
-            <img src="assets/img/profile.jpeg" class="img-fluid" alt="Alex Sin - Full-Stack Developer Profile Picture">>
+            <img src="assets/img/profile.jpeg" class="img-fluid" alt="Alex Sin - Full-Stack Developer Profile Picture">
           </div>
           <div class="col-lg-10 pt-4 pt-lg-0 content">
             <h3>Software Engineer</h3>
