fix styles and add content

--- a/index.html
+++ b/index.html
@@ -4,68 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ALEX SIN | Full-Stack Software Engineer</title>
-  <style>
-    body {
-      font-family: monospace;
-      line-height: 1.6;
-      color: #000;
-      background-color: #fff;
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-
-    h1,
-    h2 {
-      text-transform: uppercase;
-    }
-
-    a {
-      color: #000;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    .profile-header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-
-    .profile-text {
-      flex: 1;
-    }
-
-    .profile-image {
-      width: 150px;
-      height: 150px;
-      margin-left: 20px;
-      margin-bottom: 35px;
-    }
-
-    .project {
-      border: 1px solid #000;
-      padding: 10px;
-      margin-bottom: 20px;
-    }
-
-    .project img {
-      max-width: 100px;
-      float: right;
-      margin-left: 10px;
-    }
-  </style>
+  <title>ALEX SIN | Software Engineer</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
   <div class="profile-header">
     <div class="profile-text">
       <h1>ALEX SIN</h1>
-      <h4>Full-Stack Software Engineer | Web, Backend, IoT, DevOps</h4>
+      <h4>Software Engineer | Web, Backend, IoT, DevOps</h4>
       <p>building complex systems in a simple manner</p>
       <p>Contact me at <a href="mailto:[alexsin0012@gmail.com]">[alexsin0012@gmail.com]</a></p>
       <p>
@@ -117,8 +64,18 @@
 
   <h2>PERSONAL PROJECTS</h2>
 
-  <p><em>[TODO]</em></p>
+  <div class="project">
+    <h3>WebRTC Signalling Server and P2P Client</h3>
+    <p><a href="https://github.com/alexsindev/sigsvr">[Signalling Server Repository]</a></p>
+    <p><a href="https://github.com/alexsindev/p2p-client">[p2p Client Repository]</a></p>
+    <p>Exploration and implementation of the WebRTC protocol for real-time video + audio communication via the web. Check out my writeup <a href="https://selective-pomelo-ec6.notion.site/WebRTC-deep-dive-3e8af8673a2d49f8acfd99dd2cee725c"><strong>here</strong></a>.</p>
+    <p>Stack: Elixir, Phoenix Channels, WebSockets, WebRTC Protocol, JavaScript, DOM </p>
+  </div>
 
 </body>
+
+<footer>
+  <a href="https://alexsindev.github.io">alexsindev.github.io - 2025</a>
+</footer>
 
 </html>
