update skills, content, and layout

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ALEX SIN | Software Engineer</title>
+  <title>Alex Sin | SWE</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -12,9 +12,9 @@
   <div class="profile-header">
     <div class="profile-text">
       <h1>ALEX SIN</h1>
-      <h4>Software Engineer | Web, Backend, IoT, DevOps</h4>
-      <p>building complex systems in a simple manner</p>
-      <p>Contact me at <a href="mailto:[alexsin0012@gmail.com]">[alexsin0012@gmail.com]</a></p>
+      <h3>software engineer @ cadmus.io</h3>
+      <p><strong>λ</strong> functional programming w/ elixir | react</p>
+      <p>Contact me at <b><a href="mailto:[alex.sin@cadmus.io]">[alex.sin@cadmus.io]</a></b></p>
       <p>
         <a target="_blank" href="https://github.com/alexsindev">[github]</a>
         <a target="_blank" href="https://linkedin.com/in/alexsindev">[linkedin]</a>
@@ -26,35 +26,36 @@
 
   <h2>PROFESSIONAL EXPERIENCE</h2>
 
-  <div class="project">
+  <div class="section">
     <h3>Cadmus [2024-Present]</h3>
-    <p><a href="https://cadmus.io/">[https://cadmus.io/]</a></p>
+    <p><a href="https://cadmus.io/">[https://cadmus.io/] - Melbourne, Australia</a></p>
     <p>Cadmus is a first-in-market online, authentic assessment platform powering the delivery of written,
       open-book and in-place exams for every academic discipline in the higher education sector.</p>
     <p>Stack: Elixir, Phoenix, React, Apollo, GraphQL, Absinthe, PostgreSQL, AWS</p>
   </div>
 
-  <div class="project">
+  <div class="section">
     <h3>Jarvis Platform [2023-2024]</h3>
-    <p><a href="https://viatick.com/">[https://viatick.com/]</a></p>
+    <p><a href="https://viatick.com/">[https://viatick.com/] - Singapore</a></p>
     <p>Microservices-based platform for various industries with cloud-based reporting and analytics, flexible templates,
       customizable views, and dependable hardware solutions.</p>
     <p>Stack: Node.js, TypeScript, React, MySQL, Oracle Cloud, k8s, Docker, IoT, FnProject, MQTT</p>
   </div>
 
-  <div class="project">
+  <div class="section">
     <h3>ATalk [2023]</h3>
-    <p><a href="https://www.abank.com.mm/en_US/">[https://www.abank.com.mm/en_US/]</a></p>
+    <p><a href="https://www.abank.com.mm">[https://www.abank.com.mm/] - Yangon</a></p>
     <p>Real-time messaging application with video and audio call capabilities. Developed for a leading private bank in
       Myanmar.</p>
     <p>Stack: Node.js, Express, Redis, Socket.io, WebRTC, RabbitMQ, AWS EC2, AWS S3, PM2, Nginx, Firebase, Huawei OBS,
       Docker, Jitsi</p>
   </div>
 
-  <div class="project">
+  <div class="section">
     <h3>Passenger Information Display System - PIDS [2021-2022]</h3>
-    <p><a href="https://www.lta.gov.sg/content/ltagov/en/newsroom/2021/9/news-releases/New_PIDS_at_more_than_300_bus_stops.html">[Official
-        News Report by LTA, Singapore]</a></p>
+    <p><a
+        href="https://www.lta.gov.sg/content/ltagov/en/newsroom/2021/9/news-releases/New_PIDS_at_more_than_300_bus_stops.html">[Official
+        News Report by LTA, Singapore] - Singapore</a></p>
     <p>Passenger Information Display System for Singapore Land Transport Authority. Real-time bus information updates
       for over 200+ bus stops in Singapore.</p>
     <p>Stack: Elixir, Phoenix, Phoenix LiveView, Redis, React,PostgreSQL, Node.js, AWS Lambda, AWS ECS, Web Scraping,
@@ -62,14 +63,21 @@
   </div>
 
 
-  <h2>PERSONAL PROJECTS</h2>
+  <h2>EDUCATION BACKGROUND</h2>
 
-  <div class="project">
-    <h3>WebRTC Signalling Server and P2P Client</h3>
-    <p><a href="https://github.com/alexsindev/sigsvr">[Signalling Server Repository]</a></p>
-    <p><a href="https://github.com/alexsindev/p2p-client">[p2p Client Repository]</a></p>
-    <p>Exploration and implementation of the WebRTC protocol for real-time video + audio communication via the web. Check out my writeup <a href="https://selective-pomelo-ec6.notion.site/WebRTC-deep-dive-3e8af8673a2d49f8acfd99dd2cee725c"><strong>here</strong></a>.</p>
-    <p>Stack: Elixir, Phoenix Channels, WebSockets, WebRTC Protocol, JavaScript, DOM </p>
+  <div class="section">
+    <h3>Masters of Science in Computer Science [2025-Present]</h3>
+    <p>Asian Institute of Technology - Thailand</p>
+  </div>
+
+  <div class="section">
+    <h3>Bachelors of Science in Computing [2022-2023]</h3>
+    <p>University of Greenwich - UK</p>
+  </div>
+
+  <div class="section">
+    <h3>Advanced Diploma in Computing [2020-2022]</h3>
+    <p>Scottish Qualifications Authority - UK</p>
   </div>
 
 </body>
