--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Alex Sin | Software Engineer</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&family=Roboto:wght@300;400;500&display=swap"
+    rel="stylesheet">
   <style>
     * {
       margin: 0;
@@ -13,21 +18,22 @@
     }
 
     :root {
-      --primary-bg: #ffffff;
-      --secondary-bg: #fafafa;
-      --accent-bg: #f5f5f5;
-      --text-primary: #000000;
-      --text-secondary: #666666;
-      --accent-color: #3d5e7f;
-      --accent-hover: #0052a3;
-      --border-color: #e0e0e0;
-      --gradient: linear-gradient(135deg, #0066cc 0%, #004499 100%);
-      --card-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
-      --glow: 0 0 10px rgba(0, 102, 204, 0.2);
+      --primary-bg: #0f1419;
+      --secondary-bg: #161d24;
+      --accent-bg: #1c252e;
+      --text-primary: #e8e6e3;
+      --text-secondary: #9ca3af;
+      --accent-color: #6b9a78;
+      --accent-hover: #8ab89a;
+      --border-color: #2d3741;
+      --heading-font: 'Cormorant Garamond', Georgia, 'Times New Roman', serif;
+      --gradient: linear-gradient(135deg, #1a2633 0%, #0f1419 100%);
+      --card-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
+      --glow: 0 0 10px rgba(107, 154, 120, 0.2);
     }
 
     body {
-      font-family: 'JetBrains Mono', 'Fira Code', 'Cascadia Code', 'SF Mono', Consolas, monospace;
+      font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
       background: var(--primary-bg);
       color: var(--text-primary);
       line-height: 1.6;
@@ -35,7 +41,7 @@
       transition: background-color 0.3s ease, color 0.3s ease;
     }
 
-    /* Animated background */
+    /* Subtle background */
     body::before {
       content: '';
       position: fixed;
@@ -44,8 +50,8 @@
       width: 100%;
       height: 100%;
       background:
-        radial-gradient(circle at 10% 20%, rgba(255, 0, 128, 0.03) 0%, transparent 50%),
-        radial-gradient(circle at 90% 80%, rgba(0, 255, 255, 0.02) 0%, transparent 50%);
+        radial-gradient(circle at 20% 30%, rgba(107, 154, 120, 0.05) 0%, transparent 40%),
+        radial-gradient(circle at 80% 70%, rgba(107, 154, 120, 0.03) 0%, transparent 40%);
       z-index: -1;
     }
 
@@ -59,7 +65,7 @@
     /* Header Section */
     .hero {
       text-align: center;
-      padding: 60px 0;
+      padding: 20px 0;
       position: relative;
     }
 
@@ -69,14 +75,14 @@
 
     .profile-container {
       position: relative;
-      margin-bottom: 40px;
+      margin-bottom: 15px;
     }
 
     .profile-image {
       width: 120px;
       height: 120px;
       border-radius: 50%;
-      margin: 0 auto 30px;
+      margin: 0 auto 15px;
       display: block;
       transition: all 0.2s ease;
       position: relative;
@@ -91,47 +97,51 @@
     }
 
     h1 {
-      font-size: clamp(2.5rem, 6vw, 3.5rem);
-      font-weight: 400;
-      margin-bottom: 10px;
+      font-family: var(--heading-font);
+      font-size: clamp(2.2rem, 6vw, 3.2rem);
+      font-weight: 500;
       color: var(--text-primary);
-      letter-spacing: 0.1em;
-      text-transform: uppercase;
+      letter-spacing: 0.08em;
+      text-transform: none;
     }
 
     .subtitle {
-      font-size: 1rem;
+      font-family: var(--heading-font);
+      font-size: 1.1rem;
       color: var(--text-secondary);
-      margin-bottom: 15px;
-      font-weight: 300;
-      text-transform: lowercase;
+      font-weight: 400;
+      font-style: italic;
+      text-transform: none;
+      line-height: 1.7;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .tech-stack {
-      font-size: 0.9rem;
+      font-family: var(--heading-font);
+      font-size: 1rem;
       color: var(--accent-color);
-      margin-bottom: 40px;
-      font-weight: 300;
+      margin-bottom: 20px;
+      font-weight: 400;
+      letter-spacing: 0.02em;
     }
 
     .contact-info {
       display: flex;
       justify-content: center;
-      gap: 20px;
+      gap: 12px;
       flex-wrap: wrap;
-      margin-bottom: 60px;
+      margin-bottom: 30px;
     }
 
     .contact-link {
-      padding: 8px 16px;
-      background: none;
-      border: 1px solid var(--border-color);
-      border-radius: 2px;
+      border-radius: 0;
       color: var(--text-secondary);
-      text-decoration: none;
+      text-decoration: underline;
       transition: all 0.2s ease;
-      font-size: 0.85rem;
-      text-transform: lowercase;
+      font-size: 0.9rem;
+      text-transform: none;
     }
 
     .contact-link::before {
@@ -145,23 +155,24 @@
 
     /* Section Headers */
     .section-header {
-      font-size: 1.5rem;
-      font-weight: 400;
+      font-family: var(--heading-font);
+      font-size: 1.8rem;
+      font-weight: 600;
       text-align: left;
-      margin: 80px 0 40px;
+      margin: 40px 0;
       position: relative;
-      text-transform: uppercase;
-      letter-spacing: 0.2em;
+      text-transform: none;
+      letter-spacing: 0.03em;
       color: var(--text-primary);
     }
 
     .section-header::after {
       content: '';
       position: absolute;
-      bottom: -8px;
+      bottom: -10px;
       left: 0;
-      width: 40px;
-      height: 1px;
+      width: 50px;
+      height: 2px;
       background: var(--accent-color);
     }
 
@@ -200,31 +211,34 @@
     }
 
     .job-title {
-      font-size: 1.1rem;
-      font-weight: 400;
+      font-family: var(--heading-font);
+      font-size: 1.25rem;
+      font-weight: 600;
       color: var(--text-primary);
       margin-bottom: 5px;
-      text-transform: uppercase;
-      letter-spacing: 0.05em;
+      text-transform: none;
+      letter-spacing: 0.01em;
     }
 
     .job-period {
       font-size: 0.8rem;
       color: var(--accent-color);
-      padding: 2px 8px;
+      padding: 3px 10px;
       background: none;
       border: 1px solid var(--accent-color);
-      border-radius: 2px;
+      border-radius: 0;
+      font-weight: 500;
     }
 
     .company-link {
       color: var(--text-secondary);
       text-decoration: none;
-      font-size: 0.85rem;
+      font-size: 0.9rem;
       margin-bottom: 15px;
       display: block;
       transition: color 0.2s ease;
-      text-transform: lowercase;
+      text-transform: none;
+      font-style: italic;
     }
 
     .company-link:hover {
@@ -232,10 +246,11 @@
     }
 
     .job-description {
+      font-family: var(--heading-font);
       color: var(--text-secondary);
       margin-bottom: 20px;
-      line-height: 1.5;
-      font-size: 0.9rem;
+      line-height: 1.6;
+      font-size: 1rem;
     }
 
     .tech-tags {
@@ -285,34 +300,38 @@
     }
 
     .degree-title {
-      font-size: 1rem;
-      font-weight: 400;
+      font-family: var(--heading-font);
+      font-size: 1.15rem;
+      font-weight: 600;
       color: var(--text-primary);
       margin-bottom: 5px;
-      text-transform: uppercase;
-      letter-spacing: 0.05em;
+      text-transform: none;
+      letter-spacing: 0.01em;
     }
 
     .institution {
       color: var(--text-secondary);
-      font-size: 0.85rem;
-      text-transform: lowercase;
+      font-size: 0.9rem;
+      text-transform: none;
+      font-style: italic;
     }
 
     /* Footer */
     footer {
       text-align: center;
-      padding: 60px 20px 40px;
+      padding: 30px 20px;
       border-top: 1px solid var(--border-color);
-      margin-top: 80px;
+      margin-top: 60px;
     }
 
     footer a {
       color: var(--text-secondary);
       text-decoration: none;
       transition: color 0.2s ease;
-      font-size: 0.8rem;
-      text-transform: lowercase;
+      font-size: 0.85rem;
+      text-transform: none;
+      font-family: var(--heading-font);
+      font-style: italic;
     }
 
     footer a:hover {
@@ -322,13 +341,13 @@
     /* Responsive Design */
     @media (max-width: 768px) {
       .hero {
-        padding: 60px 0;
+        padding: 10px 0;
       }
 
       .contact-info {
         flex-direction: column;
         align-items: center;
-        gap: 15px;
+        gap: 10px;
       }
 
       .job-header {
@@ -337,8 +356,8 @@
       }
 
       .section-header {
-        font-size: 2rem;
-        margin: 60px 0 40px;
+        font-size: 1.5rem;
+        margin: 20px 0;
       }
 
       .container {
@@ -382,11 +401,11 @@
       }
     }
 
-    /* Loading Animation */
-    @keyframes fadeInUp {
+    /* Subtle fade animation */
+    @keyframes fadeIn {
       from {
         opacity: 0;
-        transform: translateY(30px);
+        transform: translateY(15px);
       }
 
       to {
@@ -398,7 +417,7 @@
     .hero,
     .experience-card,
     .education-card {
-      animation: fadeInUp 0.8s ease-out;
+      animation: fadeIn 0.6s ease-out;
     }
 
     .experience-card:nth-child(2) {
@@ -441,26 +460,14 @@
   <div class="container">
     <section class="hero">
       <div class="profile-container">
-        <img src="profile_pic.png" alt="Alex Sin" class="profile-image">
-        <h1>ALEX SIN</h1>
-        <p class="subtitle">Software Engineer @ Cadmus.io</p>
-        <p class="tech-stack"><strong>λ</strong> Functional Programming • Elixir • React</p>
+        <img src="profile_pic.jpeg" alt="Alex Sin" class="profile-image">
+        <h1>Alex Sin, <span style="font-size: 0.6em; font-weight: 400;">M.Sc, B.Sc</span></h1>
+        <p class="tech-stack">⧉ Fullstack • λ Functional Programming • ⎔ Distributed Systems</p>
       </div>
 
-      <div class="contact-info">
-        <a href="mailto:alex.sin@cadmus.io" class="contact-link">
-          📧 alex.sin@cadmus.io
-        </a>
-        <a href="https://github.com/alexsindev" target="_blank" class="contact-link">
-          🐙 GitHub
-        </a>
-        <a href="https://linkedin.com/in/alexsindev" target="_blank" class="contact-link">
-          💼 LinkedIn
-        </a>
-      </div>
     </section>
 
-    <h2 class="section-header">Professional Experience</h2>
+    <h2 class="section-header">Experience</h2>
 
     <div class="experience-grid">
       <div class="experience-card">
@@ -565,31 +572,74 @@
       </div>
     </div>
 
-    <h2 class="section-header">Education Background</h2>
+    <h2 class="section-header">Education</h2>
 
     <div class="education-grid">
       <div class="education-card">
-        <div class="degree-title">Masters of Science in Computer Science</div>
-        <div class="institution">Asian Institute of Technology - Thailand</div>
+        <div class="degree-title">Master of Science in Computer Science</div>
+        <div class="institution">Asian Institute of Technology - TH</div>
         <div style="color: var(--text-secondary); font-size: 0.9rem; margin-top: 5px;">2025 - Present</div>
+        <p class="job-description" style="margin-top: 10px; margin-bottom: 0;">
+          <strong>CGPA:</strong> 3.55/4.0<br>
+          <strong>Courses:</strong> <strong>Theory of Computation</strong>, <strong>Algorithm Design and
+            Analysis</strong>, <strong>Programming Language and Compilers</strong>, <strong>Data Engineering and
+            MLOps</strong>, <strong>Machine Learning</strong>, <strong>Full-stack Application Development</strong>,
+          <strong>Computer Networks</strong>, <strong>Data Modeling and Management</strong>, <strong>Business of
+            Frontier Technologies</strong>.
+        </p>
       </div>
 
       <div class="education-card">
-        <div class="degree-title">Bachelors of Science in Computing</div>
+        <div class="degree-title">Bachelor of Science (Hons) in Computing</div>
         <div class="institution">University of Greenwich - UK</div>
         <div style="color: var(--text-secondary); font-size: 0.9rem; margin-top: 5px;">2022 - 2023</div>
+        <p class="job-description" style="margin-top: 10px; margin-bottom: 0;">
+          <strong>Grade:</strong> First Class Honours<br>
+          <strong>Courses:</strong> <strong>Human Computer Interaction and Design</strong>, <strong>Requirement
+            Management</strong>, <strong>Enterprise Web Software Development</strong>, <strong>Mobile Design and
+            Development</strong>.
+        </p>
       </div>
 
       <div class="education-card">
         <div class="degree-title">Advanced Diploma in Computing</div>
         <div class="institution">Scottish Qualifications Authority - UK</div>
         <div style="color: var(--text-secondary); font-size: 0.9rem; margin-top: 5px;">2020 - 2022</div>
+        <p class="job-description" style="margin-top: 10px; margin-bottom: 0;">
+          <strong>Grade:</strong> SCQF Level 8<br>
+          <strong>Courses:</strong> <strong>Computer Systems Fundamentals</strong>, <strong>Client Operating
+            Systems</strong>, <strong>Convergence Technologies</strong>, <strong>Digital Forensics</strong>,
+          <strong>Mathematics for Computing</strong>, <strong>Routing Technology</strong>, <strong>Server
+            Administration</strong>, <strong>Switching Technology</strong>, <strong>Professionalism & Ethics in
+            Computing</strong>.
+        </p>
+      </div>
+    </div>
+
+    <h2 class="section-header">Licenses & Certifications</h2>
+
+    <div class="education-grid" style="gap: 10px;">
+      <div class="education-card" style="padding: 12px 15px;">
+        <span class="degree-title" style="font-size: 1rem;">IELTS - Band 8.0</span>
+        <span class="institution" style="margin-left: 10px;">British Council • Mar 2025</span>
+      </div>
+
+      <div class="education-card" style="padding: 12px 15px;">
+        <a href="https://www.credly.com/badges/5a194053-8f44-4ee3-b4d7-cd4c977ef2a6/public_url" target="_blank"
+          class="degree-title" style="font-size: 1rem; text-decoration: underline; color: var(--text-primary);">AWS
+          Certified Developer - Associate</a>
+        <span class="institution" style="margin-left: 10px;">Amazon Web Services • Nov 2022</span>
       </div>
     </div>
   </div>
 
   <footer>
-    <a href="https://alexsindev.github.io">alexsindev.github.io - 2025</a>
+    <div class="contact-info" style="margin-bottom: 15px;">
+      <a href="https://github.com/alexsindev" target="_blank" class="contact-link">github</a>
+      <a href="https://linkedin.com/in/alexsindev" target="_blank" class="contact-link">linkedin</a>
+      <a href="mailto:alex.sin@cadmus.io" class="contact-link">alex.sin@cadmus.io</a>
+    </div>
+    <a href="https://alexsindev.github.io">alexsindev.github.io - 2026</a>
   </footer>
 
   <script>
@@ -679,19 +729,19 @@
       observer.observe(card);
     });
 
-    // Enhanced particle cursor effect that adapts to theme
+    // Subtle cursor glow effect
     const cursor = document.createElement('div');
     cursor.style.cssText = `
       position: fixed;
-      width: 20px;
-      height: 20px;
+      width: 12px;
+      height: 12px;
       background: radial-gradient(circle, var(--accent-color) 0%, transparent 70%);
       border-radius: 50%;
       pointer-events: none;
       z-index: 9999;
       mix-blend-mode: screen;
-      transition: transform 0.1s ease, background 0.3s ease;
-      opacity: 0.8;
+      transition: transform 0.1s ease;
+      opacity: 0.4;
     `;
     document.body.appendChild(cursor);
 
@@ -703,48 +753,16 @@
       mouseY = e.clientY;
     });
 
-    // Smooth cursor following
     function updateCursor() {
-      cursorX += (mouseX - cursorX) * 0.1;
-      cursorY += (mouseY - cursorY) * 0.1;
+      cursorX += (mouseX - cursorX) * 0.15;
+      cursorY += (mouseY - cursorY) * 0.15;
 
-      cursor.style.left = (cursorX - 10) + 'px';
-      cursor.style.top = (cursorY - 10) + 'px';
+      cursor.style.left = (cursorX - 6) + 'px';
+      cursor.style.top = (cursorY - 6) + 'px';
 
       requestAnimationFrame(updateCursor);
     }
     updateCursor();
-
-    document.addEventListener('mousedown', () => {
-      cursor.style.transform = 'scale(1.5)';
-    });
-
-    document.addEventListener('mouseup', () => {
-      cursor.style.transform = 'scale(1)';
-    });
-
-    // Update cursor color when theme changes
-    const updateCursorColor = () => {
-      const accentColor = getComputedStyle(document.documentElement).getPropertyValue('--accent-color');
-      cursor.style.background = `radial-gradient(circle, ${accentColor}88 0%, transparent 70%)`;
-    };
-
-    // Watch for theme changes
-    const themeObserver = new MutationObserver((mutations) => {
-      mutations.forEach((mutation) => {
-        if (mutation.type === 'attributes' && mutation.attributeName === 'data-theme') {
-          updateCursorColor();
-        }
-      });
-    });
-
-    themeObserver.observe(document.documentElement, {
-      attributes: true,
-      attributeFilter: ['data-theme']
-    });
-
-    // Initialize cursor color
-    updateCursorColor();
   </script>
 </body>
 
